# PI7

Controle/: PID_MotorDC.ipynb
PicoW-pi7/: CMakeLists.txt
PicoW-pi7/src/: CmakeLists.txt  main.c
PicoW-pi7/src/drivers/ledonboard/: leds.c  leds.h
PicoW-pi7/src/drivers/uart/: uart.c  uart.h
PicoW-pi7/src/pi7/comm_pc/: modbus.c  modbus.h
PicoW-pi7/src/pi7/comm_pic/: comm_pic.c  comm_pic.h
PicoW-pi7/src/pi7/command_interpreter/: command_interpreter.c  command_interpreter.h
PicoW-pi7/src/pi7/invkin/: invkin.c  invkin.h
PicoW-pi7/src/pi7/trj_control/: trj_control.c  trj_control.h
PicoW-pi7/src/pi7/trj_program/: trj_program.c  trj_program.h
PicoW-pi7/src/pi7/trj_state/: trj_state.c  trj_state.h
Trajetoria/: GCode.g4  GCode.interp  GCode.tokens  GCodeLexer.interp  GCodeLexer.py  GCodeListener.py  GCodeParser.py  main.py  robot_simulator.py  simulacao_motores_d.ipynb  trajetoria_circular.gcode  trajetoria_triangulo.gcode
